@@ -1,4 +1,5 @@
 typescript
+dist
 root
 build
 *~
