@@ -6,7 +6,7 @@
 #CPU=x86_64
 CPU=i386
 
-TARGET=epel-4-$CPU
+TARGET=fedora-12-$CPU
 RESULTDIR=/var/lib/mock/$TARGET/result
 REPO=dist/MoxieLogic/$CPU
 
@@ -16,14 +16,14 @@ mkdir -p $REPO/SRPMS
 createrepo $REPO
 
 mock -r $TARGET dist/moxie-elf-binutils-*src.rpm
-mv $RESULTDIR/moxie-elf-binutils-debuginfo*$CPU.rpm $REPO/RPMS/$CPU/debuginfo
-mv $RESULTDIR/moxie-elf-binutils-*$CPU.rpm $REPO/RPMS/$CPU
+mv $RESULTDIR/moxie-elf-binutils-debuginfo*.rpm $REPO/RPMS/$CPU/debuginfo
+mv $RESULTDIR/moxie-elf-binutils-*.rpm $REPO/RPMS/$CPU
 mv $RESULTDIR/moxie-elf-binutils-*src.rpm  $REPO/SRPMS
 createrepo $REPO
 
 mock -r $TARGET dist/moxie-elf-gcc-*src.rpm
-mv $RESULTDIR/moxie-elf-gcc-debuginfo*$CPU.rpm $REPO/RPMS/$CPU/debuginfo
-mv $RESULTDIR/moxie-elf-gcc-*$CPU.rpm $REPO/RPMS/$CPU
+mv $RESULTDIR/moxie-elf-gcc-debuginfo*.rpm $REPO/RPMS/$CPU/debuginfo
+mv $RESULTDIR/moxie-elf-gcc-*.rpm $REPO/RPMS/$CPU
 mv $RESULTDIR/moxie-elf-gcc-*src.rpm  $REPO/SRPMS
 createrepo $REPO
 
@@ -33,13 +33,13 @@ mv $RESULTDIR/moxie-elf-newlib-*src.rpm  $REPO/SRPMS
 createrepo $REPO
 
 mock -r $TARGET dist/moxie-elf-gdb-*src.rpm
-mv $RESULTDIR/moxie-elf-gdb-debuginfo*$CPU.rpm $REPO/RPMS/$CPU/debuginfo
-mv $RESULTDIR/moxie-elf-gdb-*$CPU.rpm $REPO/RPMS/$CPU
+mv $RESULTDIR/moxie-elf-gdb-debuginfo*.rpm $REPO/RPMS/$CPU/debuginfo
+mv $RESULTDIR/moxie-elf-gdb-*.rpm $REPO/RPMS/$CPU
 mv $RESULTDIR/moxie-elf-gdb-*src.rpm  $REPO/SRPMS
 createrepo $REPO
 
 mock -r $TARGET dist/moxie-elf-qemu-*src.rpm
-mv $RESULTDIR/moxie-elf-qemu-debuginfo*$CPU.rpm $REPO/RPMS/$CPU/debuginfo
-mv $RESULTDIR/moxie-elf-qemu-*$CPU.rpm $REPO/RPMS/$CPU
+mv $RESULTDIR/moxie-elf-qemu-debuginfo*.rpm $REPO/RPMS/$CPU/debuginfo
+mv $RESULTDIR/moxie-elf-qemu-*.rpm $REPO/RPMS/$CPU
 mv $RESULTDIR/moxie-elf-qemu-*src.rpm  $REPO/SRPMS
 createrepo $REPO
