@@ -11,7 +11,8 @@ URL:		http://moxielogic.com/blog
 Source0:	moxie-elf-gcc.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
-BuildRequires:	moxie-elf-binutils flex bison texinfo gperf
+BuildRequires:	moxie-elf-binutils flex bison texinfo gperf 
+BuildRequires:  gmp-devel mpfr-devel libmpc-devel
 Requires:	moxie-elf-binutils
 %if %{with_newlib} == 1
 BuildRequires:	moxie-elf-newlib
